<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tilt Spider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Guide the snake by tilting! Get the eggs and avoid your tail!</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="insane">Insane</string>

</resources>
